Memoria casi arreglada y usuarios captados por flutter

--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -119,7 +119,7 @@ Nuestro proyecto se pretende desarrollar en 14 Sprints. Cada Sprint tendrá una 
 de 7 puntos de historia por Sprint. A continuación se especificará el contenido de cada Sprint con las fechas de inicio y fin de cada uno de ellos.
 
 \subsection{Sprint \#1 - Documentación inicial}
-\textit{24/11/2022   -   08/12/2022}
+\textit{24/11/2022   -   08/12/2022}\\
 
 En este Sprint se realizará:
 \begin{itemize}
@@ -129,15 +129,19 @@ En este Sprint se realizará:
     \item Redactar Capítulo 2 - Estado del Arte.
 \end{itemize}
 \subsection{Sprint \#2 - Documentación de requisitos}
+\textit{08/12/2022   -   12/01/2023}\\
+
 En este Sprint se planea realizar:
-\textit{08/12/2022   -   12/01/2023}
 \begin{itemize}
     \item Revisión de la documentación inicial y corrección de errores.
     \item Redactar Capítulo 3 - Especificación de Requisitos.
 \end{itemize}
 
+\newpage
+
 \subsection{Sprint \#3 - Documentación de HU}
-\textit{12/01/2023   -   03/02/2023}
+\textit{12/01/2023   -   03/02/2023}\\
+
 En este Sprint se realizará:
 \begin{itemize}
     \item Revisión de la documentación de requisitos y corrección de errores.
@@ -145,7 +149,8 @@ En este Sprint se realizará:
     \item Redactar Capítulo 5 - Análisis del problema.
 \end{itemize}
 \subsection{Sprint \#4 - Diseño y comienzo del desarrollo}
-\textit{03/02/2023   -   17/02/2023}
+\textit{03/02/2023   -   17/02/2023}\\
+
 En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \begin{itemize}
     \item Revisión de la planificación y el análisis y corrección de errores.
@@ -159,7 +164,7 @@ En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \end{itemize}
 
 \subsection{Sprint \#5 - Registro y login de usuarios}
-\textit{17/02/2023   -   03/03/2023}
+\textit{17/02/2023   -   03/03/2023}\\
 
 En este Sprint se comenzará el desarrollo de la aplicación realizando las funcionalidades iniciales del usuario
 que utilizará la aplicación, tales como el registro, el login, la selección de lección, etc.
@@ -174,7 +179,7 @@ que utilizará la aplicación, tales como el registro, el login, la selección d
 
 
 \subsection{Sprint \#6 - Tests y progreso}
-\textit{03/03/2023   -   17/03/2023}
+\textit{03/03/2023   -   17/03/2023}\\
 
 Este Sprint tendrá como objetivo el desarrollo de los tests permitiendo al usuario responder a las preguntas y ver el resultado.
 Además, podrá comprobar su progreso en cada lección y en la pantalla principal que muestra todas las lecciones (desbloqueando las correspondientes en su caso).
@@ -188,7 +193,7 @@ Además, podrá comprobar su progreso en cada lección y en la pantalla principa
 \end{itemize}
 
 \subsection{Sprint \#7 - Entrada de micrófono y detección de tono}
-\textit{17/03/2023   -   31/03/2023}
+\textit{17/03/2023   -   31/03/2023}\\
 
 En este Sprint se realizará la funcionalidad de la entrada de micrófono y la detección de tono. Puesto que la historia de usuario es muy grande y compleja, se reservará
 un Sprint entero para su desarrollo. Para desarrollar esta funcionalidad, se utilizarán librerías de Flutter que permitan la entrada de audio y trabajar con el mismo.
@@ -196,8 +201,9 @@ un Sprint entero para su desarrollo. Para desarrollar esta funcionalidad, se uti
     \item HU10 - Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono.
 \end{itemize}
 
+\newpage
 \subsection{Sprint \#8 - Funcionalidades del profesor con lecciones}
-\textit{31/03/2023   -   14/04/2023}
+\textit{31/03/2023   -   14/04/2023}\\
 
 En la octava iteración se comenzarán a realizar las funcionalidades relacionadas con el profesor y la gestión de las lecciones.
 Además, puede que se necesite terminar la funcionalidad de la entrada de micrófono de la iteración anterior debido a que su estimación
@@ -213,7 +219,7 @@ supera los puntos de historia de un Sprint.
 \end{itemize}
 
 \subsection{Sprint \#9 - Funcionalidades del profesor con tests}
-\textit{14/04/2023   -   28/04/2023}
+\textit{14/04/2023   -   28/04/2023}\\
 
 En esta iteración se realizarán las funcionalidades relacionadas con el profesor y la gestión de los tests, tales como la creación, modificación y eliminación de las preguntas
 de los distintos tipos. Además, se realizará la funcionalidad de ver todos los usuarios registrados en la aplicación.
@@ -231,7 +237,7 @@ de los distintos tipos. Además, se realizará la funcionalidad de ver todos los
 
 
 \subsection{Sprint \#10 - Funcionalidades del administrador y ranking}
-\textit{28/04/2023   -   12/05/2023}
+\textit{28/04/2023   -   12/05/2023}\\
 
 En la decima iteración se pretenden implementar todas las funcionalidades que tienen que ver con la administración de los usuarios, además de
 dos historias relacionadas con el perfil propio del usuario.
@@ -245,7 +251,7 @@ dos historias relacionadas con el perfil propio del usuario.
 \end{itemize}
 
 \subsection{Sprint \#11 - Funcionalidades poco prioritarias y valor añadido}
-\textit{12/05/2023   -   26/05/2023}
+\textit{12/05/2023   -   26/05/2023}\\
 
 El objetivo de este Sprint es acabar todas las historias de usuario que quedan del product backlog y cuya prioridad es baja como lo es la interacción entre los distintos usuarios de la aplicación. Además, se añadirá una funcionalidad de valor añadido
 en función del tiempo disponible y de las funcionalidades que se hayan podido implementar en los Sprints anteriores.
@@ -255,18 +261,18 @@ en función del tiempo disponible y de las funcionalidades que se hayan podido i
     \item Añadir funcionalidad de valor añadido (a definir)
 \end{itemize}
 
-\subsection{Sprint \#12 - Pruebas, conclusión y finalización del proyecto}
-\textit{26/05/2023   -   09/06/2023}
+\subsection{Sprint \#12 - Mejoras de código}
+\textit{26/05/2023   -   09/06/2023}\\
 
 En este Sprint se pretende realizar mejoras de código en cuanto a estilo, formato y calidad del mismo. Además, se pretende dejar terminado la redacción
 del séptimo capítulo del documento.
 \begin{itemize}
-    \item Redactar Capítulo 7 - Implementación
+    \item Revisar Capítulo 7 - Implementación
     \item Realizar mejoras de código.
 \end{itemize}
 
-\subsection{Sprint \#13 - Pruebas y mejoras}
-\textit{09/06/2023   -   23/06/2023}
+\subsection{Sprint \#13 - Pruebas }
+\textit{09/06/2023   -   23/06/2023}\\
 
 Este Sprint se dedicará a realizar todas las pruebas necesarias para comprobar que la aplicación funciona correctamente y que no hay errores en el código, tanto
 en el frontend como en el backend. También se redactará el octavo capítulo del documento con las pruebas realizadas.
@@ -277,8 +283,8 @@ en el frontend como en el backend. También se redactará el octavo capítulo de
     \item Redactar Capítulo 8 - Pruebas.
 \end{itemize}
 
-\subsection{Sprint \#14 - Pruebas, conclusión y finalización del proyecto}
-\textit{23/06/2023   -   15/07/2023}
+\subsection{Sprint \#14 - Conclusión y finalización del proyecto}
+\textit{23/06/2023   -   15/07/2023}\\
 
 El último Sprint se dedicará por completo a la redacción del último capítulo del documento, en el que se recogerán las conclusiones del proyecto y se realizará una revisión
 de todos los capítulos para corregir errores y mejorar la redacción. Se prepará también la presentación del proyecto para la defensa ante el tribunal.
