--- a/Memoria/capitulos/07_Implementacion.tex
+++ b/Memoria/capitulos/07_Implementacion.tex
@@ -1,1 +1,3 @@
 \chapter{Implementación}
+En este séptimo capítulo se presentará la implementación del sistema. En primer lugar, se presentará la estructura del proyecto que se ha realizado en la preparación del frontend y del backend y a continuación
+se describirá la implementación de cada una de las funcionalidades del sistema, presentando la documentación de cada ruta de la API y describiendo el código escrito durante el desarrollo.
