--- a/Memoria/capitulos/07_Implementacion.tex
+++ b/Memoria/capitulos/07_Implementacion.tex
@@ -1,3 +1,28 @@
 \chapter{Implementación}
 En este séptimo capítulo se presentará la implementación del sistema. En primer lugar, se presentará la estructura del proyecto que se ha realizado en la preparación del frontend y del backend y a continuación
 se describirá la implementación de cada una de las funcionalidades del sistema, presentando la documentación de cada ruta de la API y describiendo el código escrito durante el desarrollo.
+
+\section{Estructura del proyecto}
+\label{sec:estructura}
+Como se mencionó en la arquitectura del sistema en el anterior capítulo, el proyecto se ha desarrollado en dos partes, una parte de frontend y otra de backend. La parte de frontend se ha desarrollado en Flutter y la parte de backend se ha desarrollado en Node.js. 
+
+La estructura del proyecto se puede ver en la siguiente imagen.
+
+
+\section{Funcionalidad genérica}
+
+\subsection*{Sesión}
+\label{sec:sesion}
+\subsubsection*{Inicio de sesión}
+\subsubsection*{Registro}
+\subsubsection*{Cierre de sesión}
+
+\section{Funcionalidad de usuario}
+
+\subsection*{Lista de lecciones}
+\label{sec:lista_lecciones}
+
+\subsection*{Lección}
+\label{sec:leccion}
+
+
